samples/_failures_safe/1761073021_0cf15d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23652825.c: In function ‘main’:
./samples/SAFE/__tmp_23652825.c:198:5: error: expected expression at end of input
  198 |     if (token_count ==
      |     ^~
./samples/SAFE/__tmp_23652825.c:198:5: error: expected declaration or statement at end of input
